# multisafepay-rust-sdk

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
src/: client.rs  endpoint.rs  http.rs  lib.rs  utils.rs
src/objects/: client.rs  endpoint.rs  httpclient.rs  mod.rs
src/tests/: client_tests.rs  endpoint_test.rs  endpoint_tests.rs  http_client_tests.rs  http_test.rs  mod.rs  utils_test.rs
