[package]
name = "multisafepay-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Rick Arendsen"]
readme = "README.md"
repository = "https://github.com/rikkertthedeveloper/multisafepay-rust-sdk"
keywords = ["multisafepay", "ecommerce"]

[dependencies]
minreq = { version = "2.8.0", features = ["https"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
