[package]
name = "multisafepay-rust-sdk"
version = "0.2.0"
edition = "2021"
authors = ["Rick Arendsen"]
readme = "README.md"
repository = "https://github.com/rikkertthedeveloper/multisafepay-rust-sdk"
keywords = ["multisafepay", "ecommerce"]

[dependencies]
curl = "0.4.44"

[profile.release]
panic = "abort"
opt-level = 3

[profile.production]
panic = "abort"
inherits = "release"
lto = true
codegen-units = 1
